"Added details in config, added reminder to nav."

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -35,5 +35,17 @@
                 <a class="link" href="{% if site.resume-external %}{{ site.resume-url }}{% else %}{{ site.url }}/{{ site.resume-url }}{% endif %}">Résumé</a>
             </li>
         {% endif %}
+
+        {% if site.about == true %}
+            {% if page.title != "Reminder" %}
+                <li class="item">
+                    <a class="link" href="{{ site.url }}/reminder">Reminder</a>
+                </li>
+            {% endif %}
+        {% endif %}
+
+
+
+ 
     </ul>
 </nav>
